Updated Lesson 08 (Fractions)

--- a/Lesson08.html
+++ b/Lesson08.html
@@ -44,7 +44,11 @@
               the shapes do not fit exactly, the overlapping sections drop and block
               JiJi’s path. All the shapes have a proportional relationship to each other.
               They have either equivalent areas but are not congruent shapes or are a
-              fraction (½ or ¼) of the area of all the other shapes.</p>
+              fraction (
+              <sup>1</sup>⁄
+              <sub>2</sub>&nbsp; or
+              <sup>1</sup>⁄
+              <sub>4</sub>) of the area of all the other shapes.</p>
           </div>
         </div>
         <div class="row">
@@ -60,8 +64,10 @@
             <h4>Task 1: Present ST Math puzzles</h4>
             <p>Project puzzles from Level 2 of Bricks. Students describe and use models
               to explain how a shape can be partitioned to create two shapes with the
-              same area (12) of the whole shape. Students discuss and prove that two
-              non-congruent shapes can be the same size.</p>
+              same area (
+              <sup>1</sup>⁄
+              <sub>2</sub>) of the whole shape. Students discuss and prove that two non-congruent
+              shapes can be the same size.</p>
             <p class="ts-large"></p>
             <h4>Task 2: Playground Areas</h4>
             <p>Project a large rectangle partitioned into multiple areas to determine
@@ -76,25 +82,65 @@
             <h4 contenteditable="true">Common Core Content Standards</h4>
             <p class="ts-large">Develop understanding of fractions as numbers.</p>
             <p contenteditable="true">
-              <b>3.NF.A.1</b>&nbsp;Understand a fraction 1/b as the quantity formed by
-              1 part when a whole is partitioned into b equal parts; understand a fraction
-              a/b as the quantity formed by a parts of size 1/b.</p>
+              <b>3.NF.A.1</b>&nbsp;Understand a fraction
+              <sup>1</sup>⁄
+              <sub>b</sub>&nbsp; as the quantity formed by 1 part when a whole is partitioned
+              into b equal parts; understand a fraction
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; as the quantity formed by a parts of size
+              <sup>1</sup>⁄
+              <sub>b</sub>.</p>
             <p class="ts-large">Build fractions from unit fractions by applying and extending previous
               understandings of operations on whole numbers.</p>
             <p contenteditable="true">
               <b>4.NF.B.4</b>&nbsp;Apply and extend previous understandings of multiplication
               to multiply a fraction by a whole number.</p>
-            <p contenteditable="true">
-              <b>4.NF.B.4b</b>&nbsp;Understand a multiple of a/b as a multiple of 1/b,
-              and use this understanding to multiply a fraction by a whole number. For
-              example, use a visual fraction model to express 3 × (⅖) as 6 × (⅕), recognizing
-              this product as 6/5. (In general, n × (a/b) = (n × a)/b.)</p>
+            <p>
+              <b>4.NF.B.4b</b>&nbsp;Understand a multiple of
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; as a multiple of
+              <sup>1</sup>⁄
+              <sub>b</sub>, and use this understanding to multiply a fraction by a whole
+              number. For example, use a visual fraction model to express 3 × (
+              <sup>2</sup>⁄
+              <sub>5</sub>) as 6 × (
+              <sup>1</sup>⁄
+              <sub>5</sub>), recognizing this product as
+              <sup>6</sup>⁄
+              <sub>5</sub>. (In general, n × (
+              <sup>a</sup>⁄
+              <sub>b</sub>) =
+              <sup>(n × a)</sup>⁄
+              <sub>b</sub>.)</p>
             <p contenteditable="true">
               <b>4.NF.B.3b</b>&nbsp;Decompose a fraction into a sum of fractions with the
               same denominator in more than one way, recording each decomposition by
               an equation. Justify decompositions, e.g., by using a visual fraction model.
-              <i>Examples: ⅜ = ⅛ + ⅛ + ⅛ ; ⅜ = ⅛ + 2/8 ; 2 ⅛ = 1 + 1 + ⅛ = 8/8 + 8/8 +
-                ⅛.</i>
+              <i>Examples:
+                <sup>3</sup>⁄
+                <sub>8</sub>&nbsp; =
+                <sup>1</sup>⁄
+                <sub>8</sub>&nbsp; +
+                <sup>1</sup>⁄
+                <sub>8</sub>&nbsp; +
+                <sup>1</sup>⁄
+                <sub>8</sub>;
+                <sup>3</sup>⁄
+                <sub>8</sub>&nbsp; =
+                <sup>1</sup>⁄
+                <sub>8</sub>&nbsp; +
+                <sup>2</sup>⁄
+                <sub>8</sub>; 2
+                <sup>1</sup>⁄
+                <sub>8</sub>&nbsp; = 1 + 1 +
+                <sup>1</sup>⁄
+                <sub>8</sub>&nbsp; =
+                <sup>8</sup>⁄
+                <sub>8</sub>&nbsp; +
+                <sup>8</sup>⁄
+                <sub>8</sub>&nbsp; +
+                <sup>1</sup>⁄
+                <sub>8</sub>.</i>
             </p>
             <p class="ts-large">Use equivalent fractions as a strategy to add and subtract fractions.</p>
             <p>
@@ -102,8 +148,23 @@
               (including mixed numbers) by replacing given fractions with equivalent
               fractions in such a way as to produce an equivalent sum or difference of
               fractions with like denominators.
-              <i>For example, ⅔ + 5/4 = 8/12 + 15/12 = 23/12. (In general, a/b + c/d =
-                (ad + bc)/bd.)</i>
+              <i>For example,
+                <sup>2</sup>⁄
+                <sub>3</sub>&nbsp; +
+                <sup>5</sup>⁄
+                <sub>4</sub>&nbsp; =
+                <sup>8</sup>⁄
+                <sub>12</sub>&nbsp; +
+                <sup>15</sup>⁄
+                <sub>12</sub>&nbsp; =
+                <sup>23</sup>⁄
+                <sub>12</sub>. (In general,
+                <sup>a</sup>⁄
+                <sub>b</sub>&nbsp; +
+                <sup>c</sup>⁄
+                <sub>d</sub>&nbsp; =
+                <sup>(ad + bc)</sup>⁄
+                <sub>bd</sub>.)</i>
             </p>
           </div>
         </div>
@@ -136,14 +197,19 @@
             <h2>Fraction Schema:</h2>
             <p contenteditable="true">Partitioning a shape into proportional sections and comparing the sizes
               of the partitions develops an understanding of the relative size of fractions
-              (e.g., ½ of ¼ is ⅛). Actively manipulating the partitions within a shape
-              provides students with an understanding of the relative size of partitions
-              and proof that two non-congruent shapes can have the same area and have
-              the same fractional relationship to the whole shape. Finding the size of
-              a fractional part of a fractional part leads to understanding multiplication
-              of a fraction by a fraction. Iterating fractional parts to find the whole
-              involves going from the part to the whole or multiplicative reasoning (reasoning
-              up).</p>
+              (e.g.,
+              <sup>1</sup>⁄
+              <sub>2</sub>&nbsp; of
+              <sup>1</sup>⁄
+              <sub>4</sub>&nbsp; is
+              <sup>1</sup>⁄
+              <sub>8</sub>). Actively manipulating the partitions within a shape provides
+              students with an understanding of the relative size of partitions and proof
+              that two non-congruent shapes can have the same area and have the same
+              fractional relationship to the whole shape. Finding the size of a fractional
+              part of a fractional part leads to understanding multiplication of a fraction
+              by a fraction. Iterating fractional parts to find the whole involves going
+              from the part to the whole or multiplicative reasoning (reasoning up).</p>
           </div>
         </div>
       </div>
@@ -188,7 +254,11 @@
                   <b>Reason Proportionally:</b>&nbsp;Students may visually combine sections
                   to determine the size of some sections (i.e. the two small right triangles
                   are half of the small square which is half of the whole playground, so
-                  one of the triangles is 14of the small square and 18 of the whole playground).</li>
+                  one of the triangles is
+                  <sup>1</sup>⁄
+                  <sub>4</sub>&nbsp;of the small square and
+                  <sup>1</sup>⁄
+                  <sub>8</sub>&nbsp; of the whole playground).</li>
               </ol>
             </div>
           </div>
@@ -206,11 +276,13 @@
               </div>
               <div class="col-md-6">
                 <h6>Misconceptions:</h6>
-                <ul>
+                <ul contenteditable="true">
                   <li>Students do not attend to the relative sizes of the playground areas in
                     the playground.</li>
                   <li>Students count each section as its fractional size of the next larger
-                    shape it is part of. (e.g., C is ½ because it is half of the left side).</li>
+                    shape it is part of. (e.g., C is
+                    <sup>1</sup>⁄
+                    <sub>2</sub>&nbsp; because it is half of the left side).</li>
                 </ul>
               </div>
             </div>
@@ -335,11 +407,15 @@
             <h4>What questions will help you uncover your students’ thinking?</h4>
             <ul>
               <li>Describe what you have done so far?</li>
-              <li>How can you convince me that the area of this section is ¼ of the whole
-                playground?</li>
-              <li>Does a section that is ¼ the area of the whole city have to be the same
-                shape as another section that is ¼ the area of the whole city? Justify
-                your reasoning.</li>
+              <li>How can you convince me that the area of this section is
+                <sup>1</sup>⁄
+                <sub>4</sub>&nbsp; of the whole playground?</li>
+              <li>Does a section that is
+                <sup>1</sup>⁄
+                <sub>4</sub>&nbsp; the area of the whole city have to be the same shape as
+                another section that is
+                <sup>1</sup>⁄
+                <sub>4</sub>&nbsp; the area of the whole city? Justify your reasoning.</li>
               <li>How did you determine the size of this section?</li>
             </ul>
             <h4>What questions will help advance student thinking?</h4>
@@ -390,12 +466,22 @@
               <li>Have several students share how they determined the size of the playground
                 areas.
                 <ol type="a">
-                  <li>“I started with the A and B lots and knew they were 14 the area of the
-                    whole city . Then I knew that A was half of that so it was 18 the area
-                    of the whole city. B was the same size.”</li>
-                  <li>“I knew that E, F and G were ¼ the area of the whole city. F was half
-                    of that so it was ⅛ the area of the whole city. E and G were both half
-                    the size of F so they were ½ of ⅛ which is 1/16.”</li>
+                  <li>“I started with the A and B lots and knew they were
+                    <sup>1</sup>⁄
+                    <sub>4</sub>&nbsp; the area of the whole city . Then I knew that A was half
+                    of that so it was 18 the area of the whole city. B was the same size.”</li>
+                  <li>“I knew that E, F and G were
+                    <sup>1</sup>⁄
+                    <sub>4</sub>&nbsp; the area of the whole city. F was half of that so it was
+                    <sup>1</sup>⁄
+                    <sub>8</sub>&nbsp; the area of the whole city. E and G were both half the size
+                    of F so they were
+                    <sup>1</sup>⁄
+                    <sub>2</sub>&nbsp; of
+                    <sup>1</sup>⁄
+                    <sub>8</sub>&nbsp; which is
+                    <sup>1</sup>⁄
+                    <sub>16</sub>.”</li>
                 </ol>
               </li>
             </ol>
@@ -444,10 +530,13 @@
             <ul>
               <li>Students accurately describe how they determined the size of each playground
                 area.</li>
-              <li>Students understand that a playground area sized 1/b is one part when
-                the whole playground is partitioned into b equal parts.</li>
-              <li>Students understand that it takes b playground areas of size 1/b to make
-                the whole playground.</li>
+              <li>Students understand that a playground area sized
+                <sup>1</sup>⁄
+                <sub>b</sub>&nbsp; is one part when the whole playground is partitioned into
+                b equal parts.</li>
+              <li>Students understand that it takes b playground areas of size
+                <sup>1</sup>⁄
+                <sub>b</sub>&nbsp; to make the whole playground.</li>
               <li>Students explain and justify how they use halving to help them determine
                 the size of the playground areas.</li>
               <li>Students describe why areas that are the same fractional size of a whole
@@ -455,8 +544,20 @@
               <li>Students understand that when they add up the fractional size of all parts
                 of a whole area, they will get 1. (This is a very important concept that
                 may reveal gaps in students' schemas.)</li>
-              <li>Students understand that ½ of ½ is ¼ and ½ of ¼ is ⅛? If appropriate ask
-                students to writing an equation to represent this concept.</li>
+              <li>Students understand that
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp; of
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp; is
+                <sup>1</sup>⁄
+                <sub>4</sub>&nbsp; and
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp; of
+                <sup>1</sup>⁄
+                <sub>4</sub>&nbsp; is
+                <sup>1</sup>⁄
+                <sub>8</sub>? If appropriate ask students to writing an equation to represent
+                this concept.</li>
             </ul>
           </div>
         </div>
@@ -506,7 +607,6 @@
         <div class="row">
           <div class="col-md-12" style="text-align: center">
             <p class="ts-xlarge">Playground Areas</p>
-            <img class="img-responsive ims-large">
           </div>
         </div>
         <div class="row">
@@ -553,7 +653,6 @@
         <div class="row">
           <div class="col-md-12" style="text-align: center">
             <p class="ts-xlarge">Playground Areas</p>
-            <img class="img-responsive ims-large">
           </div>
         </div>
         <div class="row">
@@ -663,8 +762,8 @@
               <li>Knowing that playground areas C and D are one-half of the playground,
                 what expression/equation would you use to determine the size of playground
                 area C? (You may have them explain how they determined the size and write
-                the expression/equation as they explain it (e.g., C + D = ½ and C is ½
-                of C + D, and ½ × ½ = ¼).</li>
+                the expression/equation as they explain it (e.g., C + D = <sup>1</sup>⁄<sub>2</sub>&nbsp; and C is <sup>1</sup>⁄<sub>2</sub>&nbsp;
+                of C + D, and <sup>1</sup>⁄<sub>2</sub>&nbsp; × <sup>1</sup>⁄<sub>2</sub>&nbsp; = <sup>1</sup>⁄<sub>4</sub>).</li>
               <li>Explain how to determine the size of playground area H using what you
                 know about log G.</li>
             </ul>
