Updated Lesson 10 (Fractions)

--- a/Lesson10.html
+++ b/Lesson10.html
@@ -87,14 +87,36 @@
               <b>4.NF.B.4</b>&nbsp;Apply and extend previous understandings of multiplication
               to multiply a fraction by a whole number.</p>
             <p>
-              <b>4.NF.B.4a</b>&nbsp;Understand a fraction a/b as a multiple of 1/b. For
-              example, use a visual fraction model to represent 5/4 as the product 5
-              × (¼), recording the conclusion by the equation 5/4 = 5 × (¼).</p>
+              <b>4.NF.B.4a</b>&nbsp;Understand a fraction
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; as a multiple of
+              <sup>1</sup>⁄
+              <sub>b</sub>. For example, use a visual fraction model to represent
+              <sup>5</sup>⁄
+              <sub>4</sub>&nbsp; as the product 5 × (
+              <sup>1</sup>⁄
+              <sub>4</sub>), recording the conclusion by the equation
+              <sup>5</sup>⁄
+              <sub>4</sub>&nbsp; = 5 × (
+              <sup>1</sup>⁄
+              <sub>4</sub>).</p>
             <p>
-              <b>4.NF.B.4b</b>&nbsp;Understand a multiple of a/b as a multiple of 1/b,
-              and use this understanding to multiply a fraction by a whole number. For
-              example, use a visual fraction model to express 3 × (⅖) as 6 × (⅕), recognizing
-              this product as 6/5. (In general, n × (a/b) = (n × a)/b.)</p>
+              <b>4.NF.B.4b</b>&nbsp;Understand a multiple of
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; as a multiple of
+              <sup>1</sup>⁄
+              <sub>b</sub>, and use this understanding to multiply a fraction by a whole
+              number. For example, use a visual fraction model to express 3 × (
+              <sup>2</sup>⁄
+              <sub>5</sub>) as 6 × (
+              <sup>1</sup>⁄
+              <sub>5</sub>), recognizing this product as
+              <sup>6</sup>⁄
+              <sub>5</sub>. (In general, n × (
+              <sup>a</sup>⁄
+              <sub>b</sub>) =
+              <sup>(n × a)</sup>⁄
+              <sub>b</sub>.)</p>
             <p class="ts-large">
               <b>5.NF</b>&nbsp;Apply and extend previous understandings of multiplication
               and division to multiply and divide fractions.</p>
@@ -102,12 +124,28 @@
               <b>5.NF.B.4</b>&nbsp;Apply and extend previous understandings of multiplication
               to multiply a fraction or whole number by a fraction.</p>
             <p>
-              <b>5.NF.B.4a</b>&nbsp;Interpret the product (a/b) × q as a parts of a partition
-              of q into b equal parts; equivalently, as the result of a sequence of operations
-              a × q ÷ b.
-              <em>For example, use a visual fraction model to show (⅔) × 4 = 8/3, and create
-                a story context for this equation. Do the same with (⅔) × (⅘) = 8/15. (In
-                general, (a/b) × (c/d) = ac/bd.)</em>
+              <b>5.NF.B.4a</b>&nbsp;Interpret the product (
+              <sup>a</sup>⁄
+              <sub>b</sub>) × q as a parts of a partition of q into b equal parts; equivalently,
+              as the result of a sequence of operations a × q ÷ b.
+              <em>For example, use a visual fraction model to show (
+                <sup>2</sup>⁄
+                <sub>3</sub>) × 4 =
+                <sup>8</sup>⁄
+                <sub>3</sub>, and create a story context for this equation. Do the same with
+                (
+                <sup>2</sup>⁄
+                <sub>3</sub>) × (
+                <sup>4</sup>⁄
+                <sub>5</sub>) =
+                <sup>8</sup>⁄
+                <sub>15</sub>. (In general, (
+                <sup>a</sup>⁄
+                <sub>b</sub>) × (
+                <sup>c</sup>⁄
+                <sub>d</sub>) =
+                <sup>ac</sup>⁄
+                <sub>bd</sub>&nbsp;.)</em>
             </p>
           </div>
         </div>
@@ -154,10 +192,15 @@
               understanding of the role of the multiplier and multiplicand in a fraction
               multiplication problem. Modeling multiplication of a fraction by a whole
               number on a number line facilitates an understanding of why multiplication
-              by a fraction involves the act of dividing (⅕ of 20 is ⅕ × 20 but actually
-              involves dividing by 5 (into fifths)). Interpreting the product of a/b
-              × q as a parts of a partition of q into b equal parts; equivalently, as
-              the result of a sequence of operations a × q ÷ by b facilitates an understanding
+              by a fraction involves the act of dividing (
+              <sup>1</sup>⁄
+              <sub>5</sub>&nbsp; of 20 is
+              <sup>1</sup>⁄
+              <sub>3</sub>&nbsp; × 20 but actually involves dividing by 5 (into fifths)).
+              Interpreting the product of
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; × q as a parts of a partition of q into b equal parts; equivalently,
+              as the result of a sequence of operations a × q ÷ by b facilitates an understanding
               of the role of the multiplier and multiplicand in a fraction multiplication
               problem.</p>
           </div>
@@ -242,7 +285,7 @@
                 numerator.</li>
               <li>Students may confuse multiplication with division and” invert and multiply.”</li>
               <li>Students may confuse the number of groups with the size of the groups.</li>
-              <li>For a/b fractions, students may make unit sized jumps the whole number
+              <li>For <sup>a</sup>⁄<sub>b</sub>&nbsp; fractions, students may make unit sized jumps the whole number
                 of times.</li>
             </ul>
           </div>
@@ -290,10 +333,11 @@
           </div>
           <div class="col-md-7">
             <p>
-              <b>Level 2:</b>&nbsp;Puzzles in level 2 have a whole number times an a/b
-              fraction. They show 0-1 partitioned into the unit fractions and a number
-              of the unit fractions is shown as a jump. The jump is iterated the whole
-              number of times.</p>
+              <b>Level 2:</b>&nbsp;Puzzles in level 2 have a whole number times an
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; fraction. They show 0-1 partitioned into the unit fractions
+              and a number of the unit fractions is shown as a jump. The jump is iterated
+              the whole number of times.</p>
           </div>
         </div>
         <div class="row mrg-small">
@@ -302,10 +346,12 @@
           </div>
           <div class="col-md-7">
             <p>
-              <b>Level 4:</b>&nbsp;Puzzles in level 4 have an a/b fraction times a whole
-              number. The whole number is marked on the number line and partitioned into
-              b number of equal sized partitions from 0 to the whole number. One of these
-              partitions is shown as a jump. The jump is iterated a number of times.</p>
+              <b>Level 4:</b>&nbsp;Puzzles in level 4 have an
+              <sup>a</sup>⁄
+              <sub>b</sub>&nbsp; fraction times a whole number. The whole number is marked
+              on the number line and partitioned into b number of equal sized partitions
+              from 0 to the whole number. One of these partitions is shown as a jump.
+              The jump is iterated a number of times.</p>
           </div>
         </div>
         <div class="row">
@@ -409,14 +455,19 @@
               <li>Show this multiplication problem with an area model, drawing, or manipulative
                 such as Cuisenaire rods and explain how that representation compares to
                 the number line.</li>
-              <li>Show the steps for multiplying ⅔ × 2. Explain or show the steps in an
-                algorithm (procedure or formula) for solving any problem of the form a/b
-                q.</li>
-              <li>In problem (a/b) × q, why do we partition q into b parts? How many of
-                those parts do we count?</li>
+              <li>Show the steps for multiplying
+                <sup>2</sup>⁄
+                <sub>3</sub>&nbsp; × 2. Explain or show the steps in an algorithm (procedure
+                or formula) for solving any problem of the form a/b q.</li>
+              <li>In problem (
+                <sup>a</sup>⁄
+                <sub>b</sub>) × q, why do we partition q into b parts? How many of those parts
+                do we count?</li>
               <li>Show a number line and have students write the multiplication expression
                 it represents.</li>
-              <li>How are the expressions 5 × 3 and ⅖ × 3 similar and different?</li>
+              <li>How are the expressions 5 × 3 and
+                <sup>2</sup>⁄
+                <sub>5</sub>&nbsp; × 3 similar and different?</li>
             </ul>
           </div>
         </div>
@@ -431,20 +482,36 @@
               <li>Show an example of drawings, cubes, Cuisenaire Rods or strips used to
                 model the puzzle. Discuss the similarities and differences of each model
                 to a number line model.</li>
-              <li>Share a number line with misconceptions (i.e., ½ × 5 labeled as 5 jumps
-                of size ½). Have students identify the misconceptions.</li>
+              <li>Share a number line with misconceptions (i.e.,
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp; × 5 labeled as 5 jumps of size
+                <sup>1</sup>⁄
+                <sub>2</sub>&nbsp;). Have students identify the misconceptions.</li>
               <li>Have one or two students share how they represented the problems (e.g.,
-                2 × ⅔ and ⅔ × 2) on their number line. Discuss the different actions of
-                the two expressions resulting in the same product.
+                2 ×
+                <sup>2</sup>⁄
+                <sub>3</sub>&nbsp; and
+                <sup>2</sup>⁄
+                <sub>3</sub>&nbsp; × 2) on their number line. Discuss the different actions
+                of the two expressions resulting in the same product.
                 <ol type="a">
                   <li>“I started at 4, because it is the second number. I divided the number
                     line into 3 sections because that is the denominator in the fraction, so
                     it shows the size of the jumps we need to take. Then I counted 2 of those
-                    jumps/partitions because that is how many jumps/partitions we need. I ended
-                    up at 8/3.”</li>
+                    <sup>jumps</sup>⁄
+                    <sub>partitions</sub>&nbsp; because that is how many
+                    <sup>jumps</sup>⁄
+                    <sub>partitions</sub>&nbsp; we need. I ended up at
+                    <sup>8</sup>⁄
+                    <sub>3</sub>.”</li>
                   <li>“I divided my number line into thirds. I knew I need to make 4 jumps because
-                    4 was the number of copies of ⅔ I needed to make. I knew that my jumps
-                    had to be ⅔ long. So I jumped two thirds four times and landed at 2⅔.”</li>
+                    4 was the number of copies of
+                    <sup>2</sup>⁄
+                    <sub>3</sub>&nbsp; I needed to make. I knew that my jumps had to be
+                    <sup>2</sup>⁄
+                    <sub>3</sub>&nbsp; long. So I jumped two thirds four times and landed at 2
+                    <sup>2</sup>⁄
+                    <sub>3</sub>.”</li>
                 </ol>
               </li>
             </ol>
@@ -481,11 +548,19 @@
                 <ul>
                   <li>Students understand how the role of the multiplier and multiplicand determines
                     how we can represent the product in fraction/whole number multiplication
-                    (iterating the fraction n times -2 x ⅔ or dividing then multiplying by
-                    the whole number -⅔ x 2)</li>
+                    (iterating the fraction n times -2 x
+                    <sup>2</sup>⁄
+                    <sub>3</sub>&nbsp; or dividing then multiplying by the whole number
+                    <sup>-2</sup>⁄
+                    <sub>3</sub>&nbsp; x 2)</li>
                   <li>Students understand that in a multiplication expression involving a whole
-                    number and fraction i.e., ⅔ x 18 means that you have ⅔ of 18, which is
-                    less than the whole 18. It is only ⅔ of it.</li>
+                    number and fraction i.e.,
+                    <sup>2</sup>⁄
+                    <sub>3</sub>&nbsp; x 18 means that you have
+                    <sup>2</sup>⁄
+                    <sub>3</sub>&nbsp; of 18, which is less than the whole 18. It is only
+                    <sup>2</sup>⁄
+                    <sub>3</sub>&nbsp; of it.</li>
                   <li>Students understand the similarities (the multiplier tells how many times
                     to iterate the multiplicand) and differences (the product of a fraction
                     and whole number is less than the whole number if the fraction is less
@@ -518,5 +593,4 @@
       </div>
     </div>
   
-
 </body></html>
